# bsky-codes

./: .env-example  .flake8  .gitignore  .prettierrc  LICENSE  README.md  docker-compose.dev.yml  docker-compose.old.yml  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  pm2.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.gitea/workflows/: main.yaml
backend/: Dockerfile  FART.py  chrono_trigger.py  config.py  firehose_broadcaster.py  firehose_enjoyer.py  firehose_filter.py  firehose_indexer.py  firehose_listener.py  indexer.py  jetstream_enjoyer.py  replier.py  requirements.txt  stream.py
backend/FART/: auth.py  aux.py  main.py
backend/core/: __init__.py  config.py  database.py  defaults.py  logger.py  mongo_manager.py  nats.py  redis_manager.py  serialization.py  types.py
backend/interactions/: circles.py  data.py
backend/scripts/: chatbot.py
backend/services/: README.md  enjoyer.py  indexer.py  trigger.py
backend/stuff/: interactions.py
backend/utils/: core.py  database.py  defaults.py  firehose.py  interactions.py  nats.py
common/: circles.ts  defaults.ts  index.ts  mongo.ts  package.json  tsconfig.json  types.ts  wordcloud.ts
common/db/: index.ts  schema.ts
common/queries/: blocks.ts  index.ts  interactions.ts
feeder/: index.ts  package.json  tsconfig.json  well-known.ts
feeder/algos/: bbb.ts  index.ts  langPt.ts
feeder/methods/: describe-generator.ts  feed-generation.ts
frontend/: .env-example  .eslintrc.cjs  .prettierrc  package-lock.json  package.json  server.js  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
frontend/src/: app.css  app.html  hooks.server.ts
frontend/static/: style.css
indexer/: index.ts  package.json  tsconfig.json  worker.ts
indexer/src/: index.ts  subscription.ts  sync.ts  worker.ts
listener/: index.ts  package.json  subscription.ts  tsconfig.json
listener/src/: index.ts  subscription.ts
replier/: index.ts  package.json  tsconfig.json
replier/commands/: birthday.ts  bolas.ts  firstpost.ts  index.ts  remindme.ts  wordcloud.ts
scripts/: jetstream_enjoyer.py
src/: broadcaster.py  firehose_filter.py  firehose_indexer.py  listener.py  replier.py
src/utils/: defaults.py  firehose.py  redis.py
syncer/: index.ts  package.json  sync.ts  tsconfig.json
syncer/src/: index.ts  sync.ts
tasker/: const.ts  index.ts  package.json  tasks.ts  tsconfig.json
tasker/src/: index.ts
tasker/tasks/: stats.ts  sync.ts  wolfgang.ts  wordcloud.ts
utilities/: docker-compose.dev.yml  docker-compose.monit.yml  prometheus.yml
(+96 files in other folders)
