[tool.poetry]
name = "bsky_codes"
version = "0.1.0"
description = "bsky-codes, now in python"
authors = ["hpmartins <hpmartins@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
atproto = "^0.0.52"
python-socketio = {extras = ["asyncio"], version = "^5.11.4"}
pymongo = "^4.8.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
uvicorn-worker = "^0.2.0"
gunicorn = "^23.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.10.5"
requests = "^2.32.3"
websocket-client = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]

[tool.isort]
profile = "black"