[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "bsky-codes"
version = "2025.0.0"
authors = [
    { name="Henrique Martins", email="hpmartins@gmail.com" }
]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "aiohttp",
    "apscheduler >= 4.0.0a5",
    "asyncio",
    "atproto",
    "fastapi[standard]",
    "motor",
    "nats-py",
    "pillow",
    "prometheus_client",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "websockets",
    "zstandard"
]

[projects.optional-dependencies]
dev = ["black", "flake8", "ruff"]

[project.urls]
Homepage = "https://github.com/hpmartins/bsky-codes"

[tool.ruff] 
line-length = 120

[tool.ruff.lint]
ignore = ["D203", "E741"]
