[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "bsky-codes"
version = "2025.0.0"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "aiohttp",
    "apscheduler >= 4.0.0a5",
    "asyncio",
    "atproto",
    "fastapi[standard]",
    "aiocron",
    "redis >= 5.0.0",
    "redis-om >= 0.2.1",
    "redis-timeseries >= 1.4.0",
    "redisjson >= 0.0.2",
    "motor",
    "pymongo",
    "pillow",
    "prometheus_client",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "websockets",
    "zstandard"
]

[projects.optional-dependencies]
dev = ["black", "flake8", "ruff"]

[project.urls]
Homepage = "https://github.com/hpmartins/bsky-codes"

[tool.ruff] 
line-length = 120

[tool.ruff.lint]
ignore = ["D203", "E741"]
